turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:8: error: not found: value R
		if (rule(i)==R){
                             ^